tests/NormalTests/paczka2/big_fuzzy/46133410.err
Error in line 2: wuE S6 39,0
Error in line 9: jWnF0y03 A704 22,9
Error in line 15: wuE A713 61,5
Error in line 37: A713 A704 14,2
Error in line 24: vKJBP5nsK6 A704 22,8
Error in line 40: orxgRdUeJr A713 10,2
Error in line 46: A713 A713 -2,8
Error in line 48: =rxgRdUeJr A704 54,7
Error in line 45: orxgRdUeJr A704 79,3
Error in line 49: orxgRdUeJr S6 36,6
Error in line 51: orxgRdUeJr A704 88,5
Error in line 55: OvNlIIfAdRn S261 -1,4
Error in line 54: OvNlIIfAdRn S261 30,0
Error in line 59: OvNlIIfAdRn S6 39,2
Error in line 63: A713 A713 57,8
Error in line 69: BQfxM A704 32,0
Error in line 56: jWnF0y03 A704 70,9
Error in line 90: OvNlIIfAdRn S261 27,8
Error in line 92: BQfxM S6 48,1
Error in line 114: jWnF0y03 A704 27,8
Error in line 100: OvNlIIfAdRn A704 24,6
Error in line 120: jWnF0y03 A713 77,6
Error in line 122: wuE A704 32,9
Error in line 145: vKJBP5nsK6 S261 90,0
Error in line 147: OvNlIIfAdRn A713 24,4
Error in line 139: wuE A713 45,5
Error in line 137: A713 S6 64,5
Error in line 143: BQfxM S261 76,7
Error in line 146: vKJBP5nsK6 S6 81,9
Error in line 156: vKJBP5nsK6 A704 80,4
Error in line 158: vKJBP5nsK6 S261 95,0
Error in line 163: vKJBP5nsK6 A704 12,9
Error in line 170: wuE A713 76,8
Error in line 162: jWnF0y03 A713 33,7
Error in line 174: orxgRdUeJr A704 100,9
Error in line 183: vKJBP5nsK6 A713 33,7
Error in line 176: wuE S261 61,2
Error in line 189: vKJBP5nsK6 S6 46,8
Error in line 193: BQfxM A713 56,0
Error in line 197: BQfxM S6 5,7
Error in line 204: BQfxM A713 76,3
Error in line 208: jWnF0y03 S261 72,3
Error in line 213: orxgRdUeJr S261 9,1
Error in line 210: vKJBP5nsK6 A704 91,5
Error in line 222: A713 A704 18,9
Error in line 223: A713 A713 86,3
Error in line 225: jWnF0y03 A713 43,0
Error in line 234: BQfxM A713 91,6
